--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "num_samples = 1000\n",
+    "X = torch.randn(num_samples, 4 * 74)\n",
+    "Y = torch.randn(num_samples, 1)\n",
+    "X = X.numpy()\n",
+    "Y = Y.numpy()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n",
+    "train_data = lgb.Dataset(X_train, label=y_train)\n",
+    "test_data = lgb.Dataset(X_test, label=y_test)\n",
+    "param = {'num_leaves': 31, 'objective': 'regression', 'metric': 'l2'}\n",
+    "num_round = 1000\n",
+    "bst = lgb.train(param, train_data, num_round)\n",
+    "y_pred = bst.predict(X_test, num_iteration=bst.best_iteration)\n",
+    "print(mean_squared_error(y_test, y_pred))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randn(5, 3))\n",
+    "df.index = [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[0].index = [1, 2, 3, 1, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = df[1]\n",
+    "u.index = [1, 2, 3, 1, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval =  ['04:00:00', '05:00:00', '06:00:00', '07:00:00']\n",
+    "X = np.random.randn(4, 74)\n",
+    "Y = np.random.randn(4, 1)\n",
+    "#insert every minute into interval and fill corresponding position of X and Y with 0\n",
+    "def insert_interval(X, Y, interval):\n",
+    "    #insert every minute into interval and fill corresponding position of X and Y with 0\n",
+    "    #output X and Y\n",
+    "    X = pd.DataFrame(X)\n",
+    "    Y = pd.DataFrame(Y)\n",
+    "\n",
+    "    #invert interval to int\n",
+    "    interval_t = [time_to_int(i) for i in interval]\n",
+    "    X.index = interval_t\n",
+    "    Y.index = interval_t\n",
+    "\n",
+    "    #insert every minute into interval and fill corresponding position of X and Y with 0\n",
+    "    X = X.reindex(range(interval_t[0], interval_t[-1] + 1, 60)).fillna(0)\n",
+    "    Y = Y.reindex(range(interval_t[0], interval_t[-1] + 1, 60)).fillna(0)\n",
+    "    #position of interval_t in X.index\n",
+    "    pos = [X.index.get_loc(i) for i in interval_t]\n",
+    "\n",
+    "    return list(X.index), X.values, Y.values, pos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -796,71 +905,54 @@
      "output_type": "stream",
      "text": [
       "Collecting lightgbm\n",
-      "  Downloading lightgbm-4.0.0.tar.gz (1.7 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m16.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "  Using cached lightgbm-4.0.0.tar.gz (1.7 MB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
       "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: numpy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from lightgbm) (1.23.5)\n",
       "Requirement already satisfied: scipy in /opt/homebrew/anaconda3/lib/python3.10/site-packages (from lightgbm) (1.10.0)\n",
       "Building wheels for collected packages: lightgbm\n",
-      "  Building wheel for lightgbm (pyproject.toml) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mBuilding wheel for lightgbm \u001b[0m\u001b[1;32m(\u001b[0m\u001b[32mpyproject.toml\u001b[0m\u001b[1;32m)\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[38 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,465 - scikit_build_core - INFO - CMake version: 3.26.3\n",
-      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1m\u001b[92mscikit-build-core 0.4.7\u001b[0m using \u001b[94mCMake 3.26.3\u001b[0m \u001b[91m(wheel)\u001b[0m\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,468 - scikit_build_core - INFO - Build directory: /private/var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build\n",
-      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1mConfiguring CMake...\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - INFO - Ninja version: 1.11.1\n",
-      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - WARNING - libdir/ldlibrary: /opt/homebrew/anaconda3/lib/libpython3.10.a is not a real file!\n",
-      "  \u001b[31m   \u001b[0m 2023-07-23 15:49:37,620 - scikit_build_core - WARNING - Can't find a Python library, got libdir=/opt/homebrew/anaconda3/lib, ldlibrary=libpython3.10.a, multiarch=darwin, masd=None\n",
-      "  \u001b[31m   \u001b[0m loading initial cache file /var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build/CMakeInit.txt\n",
-      "  \u001b[31m   \u001b[0m -- The C compiler identification is AppleClang 14.0.3.14030022\n",
-      "  \u001b[31m   \u001b[0m -- The CXX compiler identification is AppleClang 14.0.3.14030022\n",
-      "  \u001b[31m   \u001b[0m -- Detecting C compiler ABI info\n",
-      "  \u001b[31m   \u001b[0m -- Detecting C compiler ABI info - done\n",
-      "  \u001b[31m   \u001b[0m -- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc - skipped\n",
-      "  \u001b[31m   \u001b[0m -- Detecting C compile features\n",
-      "  \u001b[31m   \u001b[0m -- Detecting C compile features - done\n",
-      "  \u001b[31m   \u001b[0m -- Detecting CXX compiler ABI info\n",
-      "  \u001b[31m   \u001b[0m -- Detecting CXX compiler ABI info - done\n",
-      "  \u001b[31m   \u001b[0m -- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ - skipped\n",
-      "  \u001b[31m   \u001b[0m -- Detecting CXX compile features\n",
-      "  \u001b[31m   \u001b[0m -- Detecting CXX compile features - done\n",
-      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP_C (missing: OpenMP_C_FLAGS OpenMP_C_LIB_NAMES)\n",
-      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP_CXX (missing: OpenMP_CXX_FLAGS OpenMP_CXX_LIB_NAMES)\n",
-      "  \u001b[31m   \u001b[0m -- Could NOT find OpenMP (missing: OpenMP_C_FOUND OpenMP_CXX_FOUND)\n",
-      "  \u001b[31m   \u001b[0m -- Found OpenMP_C: -Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include\n",
-      "  \u001b[31m   \u001b[0m -- Found OpenMP_CXX: -Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include\n",
-      "  \u001b[31m   \u001b[0m -- Found OpenMP: TRUE\n",
-      "  \u001b[31m   \u001b[0m -- Performing Test MM_PREFETCH\n",
-      "  \u001b[31m   \u001b[0m -- Performing Test MM_PREFETCH - Failed\n",
-      "  \u001b[31m   \u001b[0m -- Performing Test MM_MALLOC\n",
-      "  \u001b[31m   \u001b[0m -- Performing Test MM_MALLOC - Success\n",
-      "  \u001b[31m   \u001b[0m -- Using _mm_malloc\n",
-      "  \u001b[31m   \u001b[0m -- Configuring done (1.2s)\n",
-      "  \u001b[31m   \u001b[0m -- Generating done (0.0s)\n",
-      "  \u001b[31m   \u001b[0m -- Build files have been written to: /var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/tmphr87_kd_/build\n",
-      "  \u001b[31m   \u001b[0m \u001b[92m***\u001b[0m \u001b[1mBuilding project with \u001b[94mNinja\u001b[0m...\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m ninja: error: '/opt/homebrew/opt/libomp/lib/libomp.dylib', needed by '/private/var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/pip-install-150aflz2/lightgbm_a2c62bfcc0ac4f5aa8760babcf02ed3b/lib_lightgbm.so', missing and no known rule to make it\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m \u001b[91m\u001b[1m*** CMake build failed\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[31m  ERROR: Failed building wheel for lightgbm\u001b[0m\u001b[31m\n",
-      "\u001b[0mFailed to build lightgbm\n",
-      "\u001b[31mERROR: Could not build wheels for lightgbm, which is required to install pyproject.toml-based projects\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
+      "  Building wheel for lightgbm (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for lightgbm: filename=lightgbm-4.0.0-py3-none-macosx_13_0_arm64.whl size=1311735 sha256=0e08c39900e3169ae5ed39eda71385638edcb98c6da26e25b32358c348d3483d\n",
+      "  Stored in directory: /Users/binweiyan/Library/Caches/pip/wheels/87/b8/97/383847beeac44a4247d7c7f350f34f0dca66bbd9bc13e02403\n",
+      "Successfully built lightgbm\n",
+      "Installing collected packages: lightgbm\n",
+      "Successfully installed lightgbm-4.0.0\n"
      ]
     }
    ],
    "source": [
-    "!pip install lightgbm\n"
+    "!pip install lightgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval, X, Y, pos = insert_interval(X, Y, interval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 60, 120, 180]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos"
    ]
   },
   {
@@ -868,14 +960,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "git clone --recursive https://github.com/microsoft/LightGBM\n",
-    "cd LightGBM\n",
-    "mkdir build\n",
-    "cd build\n",
-    "cmake ..\n",
-    "make -j4"
-   ]
+   "source": []
   }
  ],
  "metadata": {
