--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1177,7 +1177,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#select column not nan\n",
+    "X = pd.DataFrame(np.random.randn(100, 3))\n",
+    "X.iloc[0:10, 0] = np.nan\n",
+    "X = X[np.isnan(X.iloc[:, 0]) == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate average minute quote data\n",
+    "import pandas as pd\n",
+    "\n",
+    "#df has columns: ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
+    "df.columns = ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
+    "df['date'] = '20'\n",
+    "#df['interval'] is in '00:00:00' format for each second\n",
+    "#get the average minute quote data\n",
+    "def get_average_minute_quote(df):\n",
+    "    #get the average minute quote data\n",
+    "    #input df\n",
+    "    #output df\n",
+    "    #df has columns: ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
+    "    df['interval'] = df['interval'].apply(lambda x: x[:8])\n",
+    "    df = df.groupby(['date', 'interval', 'msymbol_ukey']).mean().reset_index()\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#'(1, 2, 5, 7)' into tuple\n",
+    "x = 'feat_(1, 2, 5, 7)_erfs'\n",
+    "x = x.split('_')\n",
+    "#position of 'feat'\n",
+    "x = x[x.index('feat') + 1]\n",
+    "x = tuple([int(i) for i in x[1:-1].split(',')])"
+   ]
   },
   {
    "cell_type": "code",
