--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,18 +1194,297 @@
     "import pandas as pd\n",
     "\n",
     "#df has columns: ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
-    "df.columns = ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
-    "df['date'] = '20'\n",
-    "#df['interval'] is in '00:00:00' format for each second\n",
+    "num_samples = 1000\n",
+    "df = pd.DataFrame(columns = ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize'], \n",
+    "                  index = range(num_samples))\n",
+    "df['date'] = '2020-01-01'\n",
+    "#generate random interval for each second\n",
+    "df['interval'] = pd.date_range('2020-01-01 04:00:00', periods=num_samples, freq='S')\n",
+    "df['interval'] = df['interval'].apply(lambda x: x.strftime('%H:%M:%S'))\n",
+    "df['msymbol_ukey'] = 1\n",
+    "df['DD.askSize'] = np.random.randn(num_samples)\n",
+    "df['DD.ask'] = np.random.randn(num_samples)\n",
+    "df['DD.bid'] = np.random.randn(num_samples)\n",
+    "df['DD.bidSize'] = np.random.randn(num_samples)\n",
     "#get the average minute quote data\n",
     "def get_average_minute_quote(df):\n",
     "    #get the average minute quote data\n",
     "    #input df\n",
     "    #output df\n",
     "    #df has columns: ['date', 'interval', 'msymbol_ukey', 'DD.askSize', 'DD.ask', 'DD.bid', 'DD.bidSize']\n",
-    "    df['interval'] = df['interval'].apply(lambda x: x[:8])\n",
-    "    df = df.groupby(['date', 'interval', 'msymbol_ukey']).mean().reset_index()\n",
-    "    return df"
+    "    #interval is in format of string '04:00:00'\n",
+    "    df['minute'] = df['interval'].apply(lambda x: x[0:5])\n",
+    "    df = df.groupby(['date', 'minute', 'msymbol_ukey']).mean().reset_index()\n",
+    "    df['interval'] = df['minute'] + ':00'\n",
+    "    df = df.drop(['minute'], axis=1)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gw/rdd16gz922j8hc9s9c737lpw0000gr/T/ipykernel_94237/3140497962.py:25: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  df = df.groupby(['date', 'minute', 'msymbol_ukey']).mean().reset_index()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>msymbol_ukey</th>\n",
+       "      <th>DD.askSize</th>\n",
+       "      <th>DD.ask</th>\n",
+       "      <th>DD.bid</th>\n",
+       "      <th>DD.bidSize</th>\n",
+       "      <th>interval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.133531</td>\n",
+       "      <td>-0.149777</td>\n",
+       "      <td>-0.025946</td>\n",
+       "      <td>0.040859</td>\n",
+       "      <td>04:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.234814</td>\n",
+       "      <td>0.069656</td>\n",
+       "      <td>-0.007225</td>\n",
+       "      <td>0.065621</td>\n",
+       "      <td>04:01:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.103434</td>\n",
+       "      <td>0.065702</td>\n",
+       "      <td>-0.052021</td>\n",
+       "      <td>-0.052617</td>\n",
+       "      <td>04:02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.037533</td>\n",
+       "      <td>-0.007696</td>\n",
+       "      <td>-0.031506</td>\n",
+       "      <td>-0.122232</td>\n",
+       "      <td>04:03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.029898</td>\n",
+       "      <td>-0.080201</td>\n",
+       "      <td>0.012821</td>\n",
+       "      <td>0.018817</td>\n",
+       "      <td>04:04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.227068</td>\n",
+       "      <td>0.016016</td>\n",
+       "      <td>-0.026450</td>\n",
+       "      <td>0.140684</td>\n",
+       "      <td>04:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.103112</td>\n",
+       "      <td>-0.122487</td>\n",
+       "      <td>0.220393</td>\n",
+       "      <td>-0.189856</td>\n",
+       "      <td>04:06:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.123012</td>\n",
+       "      <td>-0.089331</td>\n",
+       "      <td>0.095520</td>\n",
+       "      <td>-0.078572</td>\n",
+       "      <td>04:07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.090623</td>\n",
+       "      <td>0.020811</td>\n",
+       "      <td>0.071933</td>\n",
+       "      <td>-0.065510</td>\n",
+       "      <td>04:08:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.093211</td>\n",
+       "      <td>-0.019990</td>\n",
+       "      <td>0.007875</td>\n",
+       "      <td>0.062415</td>\n",
+       "      <td>04:09:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.208527</td>\n",
+       "      <td>-0.036852</td>\n",
+       "      <td>-0.036433</td>\n",
+       "      <td>0.071881</td>\n",
+       "      <td>04:10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.311768</td>\n",
+       "      <td>-0.245832</td>\n",
+       "      <td>0.161785</td>\n",
+       "      <td>0.027150</td>\n",
+       "      <td>04:11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.013286</td>\n",
+       "      <td>-0.001498</td>\n",
+       "      <td>0.133942</td>\n",
+       "      <td>-0.198272</td>\n",
+       "      <td>04:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.137014</td>\n",
+       "      <td>-0.075449</td>\n",
+       "      <td>-0.025207</td>\n",
+       "      <td>-0.039019</td>\n",
+       "      <td>04:13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.185769</td>\n",
+       "      <td>0.080018</td>\n",
+       "      <td>0.042362</td>\n",
+       "      <td>-0.169893</td>\n",
+       "      <td>04:14:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.004164</td>\n",
+       "      <td>0.135082</td>\n",
+       "      <td>0.150874</td>\n",
+       "      <td>-0.135782</td>\n",
+       "      <td>04:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.089133</td>\n",
+       "      <td>-0.088959</td>\n",
+       "      <td>0.003759</td>\n",
+       "      <td>-0.074222</td>\n",
+       "      <td>04:16:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date  msymbol_ukey  DD.askSize    DD.ask    DD.bid  DD.bidSize  \\\n",
+       "0   2020-01-01             1   -0.133531 -0.149777 -0.025946    0.040859   \n",
+       "1   2020-01-01             1   -0.234814  0.069656 -0.007225    0.065621   \n",
+       "2   2020-01-01             1   -0.103434  0.065702 -0.052021   -0.052617   \n",
+       "3   2020-01-01             1   -0.037533 -0.007696 -0.031506   -0.122232   \n",
+       "4   2020-01-01             1   -0.029898 -0.080201  0.012821    0.018817   \n",
+       "5   2020-01-01             1   -0.227068  0.016016 -0.026450    0.140684   \n",
+       "6   2020-01-01             1    0.103112 -0.122487  0.220393   -0.189856   \n",
+       "7   2020-01-01             1    0.123012 -0.089331  0.095520   -0.078572   \n",
+       "8   2020-01-01             1   -0.090623  0.020811  0.071933   -0.065510   \n",
+       "9   2020-01-01             1    0.093211 -0.019990  0.007875    0.062415   \n",
+       "10  2020-01-01             1    0.208527 -0.036852 -0.036433    0.071881   \n",
+       "11  2020-01-01             1    0.311768 -0.245832  0.161785    0.027150   \n",
+       "12  2020-01-01             1   -0.013286 -0.001498  0.133942   -0.198272   \n",
+       "13  2020-01-01             1   -0.137014 -0.075449 -0.025207   -0.039019   \n",
+       "14  2020-01-01             1   -0.185769  0.080018  0.042362   -0.169893   \n",
+       "15  2020-01-01             1    0.004164  0.135082  0.150874   -0.135782   \n",
+       "16  2020-01-01             1   -0.089133 -0.088959  0.003759   -0.074222   \n",
+       "\n",
+       "    interval  \n",
+       "0   04:00:00  \n",
+       "1   04:01:00  \n",
+       "2   04:02:00  \n",
+       "3   04:03:00  \n",
+       "4   04:04:00  \n",
+       "5   04:05:00  \n",
+       "6   04:06:00  \n",
+       "7   04:07:00  \n",
+       "8   04:08:00  \n",
+       "9   04:09:00  \n",
+       "10  04:10:00  \n",
+       "11  04:11:00  \n",
+       "12  04:12:00  \n",
+       "13  04:13:00  \n",
+       "14  04:14:00  \n",
+       "15  04:15:00  \n",
+       "16  04:16:00  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_average_minute_quote(df)"
    ]
   },
   {
@@ -1224,10 +1503,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Length of values (1000) does not match length of index (5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[65], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m num_samples \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m\n\u001b[0;32m----> 2\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39minterval\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mdate_range(\u001b[39m'\u001b[39m\u001b[39m2020-01-01 04:00:00\u001b[39m\u001b[39m'\u001b[39m, periods\u001b[39m=\u001b[39mnum_samples, freq\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mS\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39minterval\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39minterval\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: x\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mH:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mM:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mS\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/pandas/core/frame.py:3980\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3977\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_array([key], value)\n\u001b[1;32m   3978\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3979\u001b[0m     \u001b[39m# set column\u001b[39;00m\n\u001b[0;32m-> 3980\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_set_item(key, value)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/pandas/core/frame.py:4174\u001b[0m, in \u001b[0;36mDataFrame._set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4164\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_set_item\u001b[39m(\u001b[39mself\u001b[39m, key, value) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   4165\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   4166\u001b[0m \u001b[39m    Add series to DataFrame in specified column.\u001b[39;00m\n\u001b[1;32m   4167\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4172\u001b[0m \u001b[39m    ensure homogeneity.\u001b[39;00m\n\u001b[1;32m   4173\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4174\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sanitize_column(value)\n\u001b[1;32m   4176\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   4177\u001b[0m         key \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m   4178\u001b[0m         \u001b[39mand\u001b[39;00m value\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   4179\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_extension_array_dtype(value)\n\u001b[1;32m   4180\u001b[0m     ):\n\u001b[1;32m   4181\u001b[0m         \u001b[39m# broadcast across multiple columns if necessary\u001b[39;00m\n\u001b[1;32m   4182\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mis_unique \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns, MultiIndex):\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/pandas/core/frame.py:4915\u001b[0m, in \u001b[0;36mDataFrame._sanitize_column\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m   4912\u001b[0m     \u001b[39mreturn\u001b[39;00m _reindex_for_setitem(Series(value), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex)\n\u001b[1;32m   4914\u001b[0m \u001b[39mif\u001b[39;00m is_list_like(value):\n\u001b[0;32m-> 4915\u001b[0m     com\u001b[39m.\u001b[39;49mrequire_length_match(value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex)\n\u001b[1;32m   4916\u001b[0m \u001b[39mreturn\u001b[39;00m sanitize_array(value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex, copy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, allow_2d\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/site-packages/pandas/core/common.py:571\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    567\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    568\u001b[0m \u001b[39mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[1;32m    569\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    570\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(index):\n\u001b[0;32m--> 571\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    572\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mLength of values \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    573\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data)\u001b[39m}\u001b[39;00m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    574\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdoes not match length of index \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    575\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(index)\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    576\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Length of values (1000) does not match length of index (5)"
+     ]
+    }
+   ],
+   "source": [
+    "num_samples = 1000\n",
+    "df['interval'] = pd.date_range('2020-01-01 04:00:00', periods=num_samples, freq='S')\n",
+    "df['interval'] = df['interval'].apply(lambda x: x.strftime('%H:%M:%S'))"
+   ]
   }
  ],
  "metadata": {
