--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1527,6 +1527,42 @@
     "df['interval'] = pd.date_range('2020-01-01 04:00:00', periods=num_samples, freq='S')\n",
     "df['interval'] = df['interval'].apply(lambda x: x.strftime('%H:%M:%S'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int64)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos = [1, 2, 3, 4, 5]\n",
+    "k = np.random.randn(5)\n",
+    "np.array(pos)[np.isnan(k)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
