--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1265,9 +1265,9 @@
     "    #interval is in format of string '04:00:00'\n",
     "    #t is the time horizon\n",
     "    #apply smoothing to each horizon m\n",
-    "    df['smooth'] = df.groupby(['date', 'msymbol_ukey'])['DD.ret'].transform(lambda x: x.rolling(m).apply(lambda x: np.mean(x)))\n",
+    "    df['smooth'] = df['DD.ret'].rolling(m).mean()\n",
     "    #get the entropy of each time horizon t\n",
-    "    df['entropy'] = df.groupby(['date', 'msymbol_ukey'])['smooth'].transform(lambda x: x.rolling(t).apply(lambda x: -np.sum(x * np.log(x))))\n",
+    "    df['entropy'] = df['smooth'].rolling(t).apply(lambda x: -np.sum(x * np.log(x)))\n",
     "    return df['entropy']\n",
     "\n",
     "#the acculmulated Buy - Sell imbalance\n",
@@ -1282,7 +1282,7 @@
     "def get_vol_quantile(df, quantile = 2):\n",
     "    #get the quantile of ret based on DD.vol quantile\n",
     "    #return vol quantile\n",
-    "    df['vol_quantile'] = pd.qcut(df['DD.vol'], quantile, labels=False)\n",
+    "    df['vol_quantile'] = pd.qcut(df['DD.vol'], quantile, labels=False, duplicates='drop')\n",
     "    df['minute'] = df['interval'].apply(lambda x: x[0:5]) + ':00'\n",
     "    #return the mean of each quantile\n",
     "    for i in range(quantile):\n",
