--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -47,8 +47,17 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "\n",
-    "clf = svm.SVC(kernel='rbf', C=1)\n",
+    "#using Nyström method\n",
+    "from sklearn.kernel_approximation import Nystroem\n",
+    "feature_map_nystroem = Nystroem(gamma=.2, random_state=1, n_components=100)\n",
+    "X_train = feature_map_nystroem.fit_transform(X_train)\n",
+    "X_test = feature_map_nystroem.transform(X_test)\n",
+    "\n",
+    "#using RBF kernel\n",
+    "clf = svm.SVC(kernel='rbf')\n",
     "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#predict\n",
     "\n",
     "y_pred = clf.predict(X_test)\n",
     "#plot\n",
